# Numerical-codes

./: .gitignore  LICENSE  README.md
Entropy Inviscid Burgers/: burgers-entropy-1.ipynb
Financial models/: SABR.ipynb
Improper integrals/: CMakeLists.txt  gaussian-integral.cc  run.sh
Improper integrals/Gaussian integrals/: CMakeLists.txt  gaussian-integral.cc  run.sh
Improper integrals/Transcendentals/: CMakeLists.txt  run.sh  transcendental-integrals.cc
Improper integrals/Transcendentals/src/: integration_data.h  transcendental-integrals.cc
Random walks/: Random_walks.ipynb
Single variable Differentiation/: 1st_2nd_Derivatives.ipynb  Derivatives.ipynb
Single variable Integration/: 1_3-Simpson.ipynb  Adaptive_Simpson.ipynb  Composite_1_3-Simpson.ipynb  simpson.m
Wave equation/: waveFD.m  wave_FD.ipynb
fft/: makefile  run-tensor.sh  run.sh
fft/src/: cosine.cc  fft.c  fft.cc  fft_tensor.cc  tensor.h
